--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   path_provider: ^2.1.1
   image_picker: ^1.0.4
   share_plus: ^7.2.1
+  pdf: ^3.10.7
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
