--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   share_plus: ^7.2.1
   pdf: ^3.10.7
   shared_preferences: ^2.2.2
+  open_file: ^3.3.2
 
 dev_dependencies:
   flutter_test:
