--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   pdf: ^3.10.7
   shared_preferences: ^2.2.2
   open_file: ^3.3.2
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
