--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   shared_preferences: ^2.2.2
   open_file: ^3.3.2
   intl: ^0.19.0
+  flutter_spinkit: ^5.2.0
 
 dev_dependencies:
   flutter_test:
