--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
         android:label="Pilot Bazar"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+        <!-- android:enableOnBackInvokedCallback="true" -->
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
