--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   flutter_spinkit: ^5.2.0
   modal_progress_hud_nsn: ^0.4.0
   image_loading_animation: ^0.0.1
+  provider: ^6.1.1
+  photo_view: ^0.14.0
 
 
 dev_dependencies:
