user manage ment part 1

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   image_loading_animation: ^0.0.1
   provider: ^6.1.1
   photo_view: ^0.14.0
+  flutter_image_compress: ^2.0.0
 
 
 dev_dependencies:
