--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_image_compress: ^2.0.0
   internet_connection_checker: ^1.0.0+1
   connectivity_plus: ^5.0.2
+  number_to_words_english: ^2.0.2
 
 
 dev_dependencies:
